# cookiecutter-flask-restful

./: .gitignore  .travis.yml  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_proiect.py  post_gen_project.py
{{cookiecutter.project_name}}/: .dockerignore  .flaskenv  .testenv  .travis.yaml  Dockerfile  Makefile  app.wsgi  autoapp.py  cookiecutter-options.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.py  tox.ini
{{cookiecutter.project_name}}/migrations/versions/: 3c403aee5d08_initial_migration.py
{{cookiecutter.project_name}}/tests/: conftest.py  factories.py  test_api.py  test_auth.py  test_celery.py  test_user.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/: app.py  celery_app.py  config.py  extensions.py  manage.py  test_config.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/api/: __init__.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/auth/: __init__.py  helpers.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/blueprints/: __init__.py  api.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/common/: exceptions.py  schema_utils.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/commons/: apispec.py  pagination.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/models/: __init__.py  blacklist.py  blocklist.py  user.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/resources/: __init__.py  user.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/tasks/: __init__.py  example.py
(+56 files in other folders)
