[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.app_name}}"
version = "0.1"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-restful",
    "flask-migrate",
    "flask-jwt-extended",
    "flask-marshmallow",
    "marshmallow-sqlalchemy",
    "python-dotenv",
    "passlib",
    "apispec[yaml]",
    "apispec-webframeworks",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
